# Tetris-SDL

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile_flags.txt  premake5.lua
src/: main.cpp
tetris_sdl/src/: Renderer.cpp  Renderer.h  Tetromino.cpp  Tetromino.h  Viewport.h  Window.cpp  Window.h  board.h  game.cpp  game.hpp  log.cpp  log.h  main.cpp  precompch.cpp  precompch.h  texture.cpp  texture.h
